--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-chime-sdk-media-pipelines": "^3.901.0",
     "@aws-sdk/client-chime-sdk-meetings": "^3.901.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
